--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
 <html>
-  <head>
-    <script> 
-      $(function(){
-        $("#load_content").load("/md-grid/index.html"); 
-      });
-    </script>
-  </head>
   <body>
-    <div id="load_content"></div>
+    <meta http-equiv="refresh" content"2; /md_grid/index.html">
   </body>
 </html>
