--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <meta http-equiv="refresh" content"2; /md_grid/index.html">
+    <meta http-equiv="refresh" content"2; ./md_grid/index.html">
   </body>
 </html>
