--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <h1>Redirecting</h1>
+  </head>
   <body>
     <meta http-equiv="refresh" content"2; ./md_grid/index.html">
   </body>
