--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <head>
     <h1>Redirecting</h1>
-    <meta http-equiv="refresh" content"2; ./md_grid/index.html">
+    <meta http-equiv="refresh" content"0; /md_grid/index.html">
   </head>
 </html>
